# book-unbind

./: .gitignore  README.md  README.zh-TW.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
changelog/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md
installer/: BookUnbind.iss
src/: filename_builder.py  page_detector.py  pdf_splitter.py
src/gui/: app.py
tests/: test_filename_builder.py  test_page_detector.py
